--- a/style.css
+++ b/style.css
@@ -36,13 +36,7 @@ body {
     padding-left: 4px;
     padding-right: 4px;
 }
-/* Sticky header row for all header cells in the first row */
-.grid-container > .grid-item:nth-child(n+1):nth-child(-nVAR) {
-    position: sticky;
-    top: 0;
-    z-index: 10;
-    background: #111;
-}
+/* Sticky header row for all header cells in the first row, up to 10 columns */
 .cols-2 > .grid-item:nth-child(-n+2),
 .cols-3 > .grid-item:nth-child(-n+3),
 .cols-4 > .grid-item:nth-child(-n+4),
