--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     /* grid-template-columns is set inline by PHP */
     gap: 2px;
     border: 1px solid white;
-    padding: 10px;
+    /* padding: 10px;*/ 
     margin-bottom: 40px;
     overflow: auto;
     max-height: 80vh; /* Added max-height for sticky header */
