--- a/style.css
+++ b/style.css
@@ -17,7 +17,8 @@ body {
     color: white;
     text-align: center;
     padding: 10px;
-    border: 1px solid white;
+    border-left: 1px solid white;
+    border-right: 1px solid white;
 }
 .active-slot {
     background-color: white;
