Refactor body styles for improved layout and alignment

--- a/style.css
+++ b/style.css
@@ -23,6 +23,11 @@ body {
     background: white;
     color: black;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
 }
 .time-slot,
 .tijd-header {
