Increase z-index values for active slots and sticky elements to improve layering

--- a/style.css
+++ b/style.css
@@ -108,8 +108,30 @@ body {
         max-width: 60px;
         font-size: 11px;
         padding: 0 2px;
+        background: black;
+        z-index: 1000;
     }
-    h1, h2 {
-        text-align: center;
+    .active-slot span {
+        z-index: 1100;
+    }
+    .sticky-header, .tijd-header {
+        z-index: 1000;
+    }
+    .grid-item.time-slot:not(.tijd-header) {
+        z-index: 1000;
+    }
+    .sticky-tijd {
+        z-index: 999;
+    }
+    .cols-2 > .grid-item:nth-child(-n+2),
+    .cols-3 > .grid-item:nth-child(-n+3),
+    .cols-4 > .grid-item:nth-child(-n+4),
+    .cols-5 > .grid-item:nth-child(-n+5),
+    .cols-6 > .grid-item:nth-child(-n+6),
+    .cols-7 > .grid-item:nth-child(-n+7),
+    .cols-8 > .grid-item:nth-child(-n+8),
+    .cols-9 > .grid-item:nth-child(-n+9),
+    .cols-10 > .grid-item:nth-child(-n+10) {
+        z-index: 1000;
     }
 }
