--- a/style.css
+++ b/style.css
@@ -125,4 +125,12 @@ h2 {
 }
 img[src="header_2025-01.svg"] {
     margin-top: 0 !important;
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    max-width: 900px;
+    z-index: 3000;
+    background: black;
+    display: block;
 }
