--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 h2 {
     position: sticky;
-    top: 120px;
+    top: 100px; /* Match the header image height above */
     z-index: 2500;
     background: black;
     color: white;
@@ -138,4 +138,5 @@ img[src="header_2025-01.svg"] {
     z-index: 3000;
     background: black;
     display: block;
+    height: 100px;
 }
