--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
     margin-top: 0;
     overflow: auto;
     max-height: calc(100vh - var(--header-height, 0px) - 48px); /* 48px is approx. h2 height incl. margin/padding */
-    background: transparent;
+    background: black;
 }
 h2 {
     position: sticky;
