--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
     z-index: 2000;
     display: grid;
     gap: 0;
-    border: 1px solid white;
+    border: none;
     margin-bottom: 0;
     margin-top: 0;
     overflow: auto;
@@ -23,6 +23,7 @@ h2 {
     background: black;
     color: white;
     padding: 8px 0 4px 0;
+    margin: 0;
 }
 .grid-item {
     color: white;
