--- a/style.css
+++ b/style.css
@@ -109,6 +109,10 @@ h2 {
         white-space: normal;
         display: block;
     }
+    .broeikas-col {
+        min-width: 0 !important;
+        max-width: 100% !important;
+    }
     .time-slot {
         min-width: 40px;
         max-width: 60px;
